[project]
name = "revised-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "dropbox>=12.0.2",
    "google-api-python-client>=2.160.0",
    "google-auth>=2.38.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "pymupdf>=1.25.2",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "redis>=5.2.1",
    "requests>=2.32.3",
]
